# homelab_assistant

./: .gitignore  README.md  pyproject.toml
data/: Proxmox.md  host-hardware-topology.md
scripts/: check_anomalies.py  daily_digest.py  ingest_docs.py
src/: main.py
src/agent/: graph.py  prompts.py  state.py  tools.py
src/agent/sub_agents/: containers.py  jellyfin.py  navidrome.py  nginx.py  services.py  storage.py  technitium.py  truenas.py  vaultwarden.py
src/bot/: telegram_app.py  whisper_stt.py
src/clients/: grafana_loki.py  influxdb.py  loki.py  ping.py  prometheus.py  proxmox.py  telemetry.py  truenas.py
src/config/: settings.py
src/tools/: ping.py  qdrant.py  telemetry.py  trend_analyzer.py  truenas.py
