[project]
name = "homelab-assistant"
version = "0.1.0"
description = "AIOps assistant for a Proxmox home lab"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "langgraph>=0.0.26",
    "langchain>=0.1.11",
    "langchain-community>=0.0.25",
    "python-telegram-bot>=21.0",
    "requests>=2.31.0",
    "pydantic-settings>=2.2.1",
    "python-dotenv>=1.0.1",
    "pytelegrambotapi>=4.32.0",
    "langchain-ollama>=1.0.1",
    "langfuse>=2.0.0,<3.0.0",
    "langchain-google-genai>=4.2.1",
    "qdrant-client>=1.7.0",
    "langchain-qdrant>=0.1.1",
    "python-frontmatter>=1.1.0",
    "PyYAML>=6.0.1"
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.3.0",
]
